--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,11 @@
     --foreground: #ededed;
   }
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
